@@ -14,18 +14,21 @@
  * limitations under the License.
  */
 
-import org.gradle.build.GenerateReleasesXml
+apply from: "$rootDir/gradle/providedConfiguration.gradle"
 
 configurations {
     reports
 }
 
 dependencies {
-    groovy libraries.groovy
+    compile libraries.groovy
 
     publishCompile libraries.slf4j_api
     publishCompile project(":baseServices")
+    publishCompile project(":messaging")
 
+    compile project(":baseServicesGroovy")
+    compile project(":resources")
     compile libraries.asm
     compile libraries.ant
     compile libraries.commons_collections
@@ -37,17 +40,32 @@ dependencies {
     compile libraries.guava
     compile libraries.jcip
     compile libraries.jul_to_slf4j
+    compile module('com.googlecode.jarjar:jarjar:1.3')
+    compile libraries.inject
 
     compile project(":cli")
     compile project(":native")
+
+    runtime project(":docs")
+    compile(group: 'com.jfrog.bintray.client', name: 'bintray-client-java-impl', version: '0.1.0'){
+        exclude module:'groovy-all'
+        exclude module:'groovy'
+        exclude group: 'org.slf4j'
+        exclude module: 'commons-collections'
+        exclude module: 'commons-lang'
+        exclude module: 'httpclient'
+        exclude module: 'nekohtml'
+    }
 
     runtime libraries.log4j_to_slf4j
     runtime libraries.jcl_to_slf4j
 
     testCompile libraries.log4j_to_slf4j
     testCompile libraries.jcl_to_slf4j
+    testCompile libraries.jsoup
 
-    testRuntime "xerces:xercesImpl:2.9.1"
+    testRuntime libraries.xerces
+    testRuntime project(":diagnostics")
 
     testFixturesCompile project(":internalTesting")
     testFixturesRuntime project(':coreImpl')
@@ -57,16 +75,17 @@ dependencies {
     reports 'css3-pie:css3-pie:1.0beta3'
 }
 
-test {
-    jvmArgs '-Xms128m', '-Xmx512m', '-XX:MaxPermSize=128m', '-XX:+HeapDumpOnOutOfMemoryError'
-}
+useTestFixtures()
+useTestFixtures(project: ":messaging")
 
 [compileGroovy, compileTestGroovy]*.groovyOptions*.fork(memoryInitialSize: '128M', memoryMaximumSize: '1G')
 
-task releasesResource(type: GenerateReleasesXml) {
-    destFile = new File(generatedResourcesDir, "org/gradle/releases.xml")
+task buildReceiptResource(type: Copy, dependsOn: rootProject.createBuildReceipt) {
+    into "$generatedResourcesDir/org/gradle"
+    from rootProject.createBuildReceipt.receiptFile
 }
-sourceSets.main.output.dir generatedResourcesDir, builtBy: releasesResource
+
+sourceSets.main.output.dir generatedResourcesDir, builtBy: buildReceiptResource
 
 task reportResources(type: Copy) {
     from configurations.reports
@@ -86,7 +105,7 @@ class PluginsManifest extends DefaultTask {
     @Input
     Properties getPluginProperties() {
         def properties = new Properties()
-        properties.plugins = project.pluginProjects().collect { it.archivesBaseName }.join(',')
+        properties.plugins = project.pluginProjects.collect { it.archivesBaseName }.join(',')
         return properties
     }
 
